breadcrumb-fix-alignment-product-info-ok

--- a/reactstore/src/components/parts/breadCrumbs/breadCrumbs.css
+++ b/reactstore/src/components/parts/breadCrumbs/breadCrumbs.css
@@ -7,7 +7,7 @@ h1 {
     flex-direction: row;
     justify-content: space-around;
     width: fit-content;
-    margin-left: 7rem;
+    margin: 0 auto;
     padding: 0rem 0 4rem 0;
     text-transform: capitalize;
     color: #696969;
@@ -17,7 +17,7 @@ h1 {
     cursor: pointer;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1501px) {
     .breadCrumbs-container {
         display: none;
     }
