--- a/reactstore/src/pages/products.css
+++ b/reactstore/src/pages/products.css
@@ -21,10 +21,10 @@
 
 .products-ul {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 1rem;
+    width: 90vw;
     padding: 0 2rem 0 7rem;
-    width: 100vw;
 }
 
 .product-title {
@@ -44,8 +44,67 @@
     width: 12rem;
 }
 
+@media only screen and (max-width: 1800px) {
+    .products-ul {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1rem;
+        padding: 7rem 2rem 0 6rem;
+        width: 100vw;
+    }
+}
+
+@media only screen and (max-width: 1400px) {
+    .products-ul {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1rem;
+        padding: 7rem 2rem 0 6rem;
+        width: 100vw;
+    }
+}
+
 @media only screen and (max-width: 1000px) {
     .products-main-container {
         margin-top: 24%;
+    }
+
+    .products-ul {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1rem;
+        padding: 0 2rem 0 2rem;
+        width: 100vw;
+    }
+
+}
+
+@media only screen and (max-width: 801px) {
+    .products-main-container {
+        margin-top: 24%;
+    }
+
+    .products-ul {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        padding: 0 2rem 0 3rem;
+        width: fit-content;
+        margin: 0 auto;
+    }
+}
+
+@media only screen and (max-width: 501px) {
+    .products-container {
+        padding: 1rem;
+    }
+
+    .products-ul {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        padding: 0 2rem 0 0rem;
+        width: fit-content;
+        margin: 0 auto;
     }
 }
